2007-04-12  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/4348
	* binutils-all/empty.s: New file.
	* binutils-all/strip-3.d: Likewise.

	* binutils-all/objcopy.exp: Run strip-3 for ELF target.

2007-02-27  Nathan Sidwell  <nathan@codesourcery.com>

	* binutils-all/objcopy.exp: Skip for uclinux targets.

2007-02-14  Nick Clifton  <nickc@redhat.com>

	* binutils-all/readelf.exp (readelf_wi_test): Fix unexpected
	output failure message.

2007-01-08  Kai Tietz	<kai.tietz@onevision.com>

	* copy-3.d: Renamed target x86_64-*-mingw64 to x86_64-*-mingw*
	* dlltool.exp: Dito
	* lang.rc: Dito
	* strtab1.rc: Dito
	* windres.exp: Dito

2006-09-20  Kai Tietz  <Kai.Tietz@onevision.com>

	* binutils-all/copy-3.d: Add support for target x86_64-pc-mingw64.
	* binutils-all/dlltool.exp: Likewise.
	* binutils-all/objcopy.exp: Likewise.
	* binutils-all/windres/windres.exp: Likewise.
	* binutils-all/windres/lang.rc: xfail it as long as there is no windows.h.
	* binutils-all/windres/strtab1.rc: Likewise.
	* lib/utils-lib.exp: Adjust executable prefix detection (as .exe).

2006-09-14  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/3181
	* binutils-all/objcopy.exp: Run strip-1 and strip-2 for ELF
	targets.

	* binutils-all/strip-1.d: New file.
	* binutils-all/strip-2.d: Likewise.

	* lib/utils-lib.exp (run_dump_test): Support strip.

2006-08-15  Thiemo Seufer  <ths@mips.com>
            Nigel Stephens  <nigel@mips.com>
            David Ung  <davidu@mips.com>

	* binutils-all/readelf.exp (readelf_test): Handle mips*-sde-elf*.

2006-06-24  Richard Sandiford  <richard@codesourcery.com>

	* binutils-all/localize-hidden-1.d: Use objdump --syms instead
	of readelf.

2006-06-23  Richard Sandiford  <richard@codesourcery.com>

	* binutils-all/localize-hidden-1.s,
	* binutils-all/localize-hidden-1.d,
	* binutils-all/localize-hidden-2.s,
	* binutils-all/localize-hidden-2.d: New tests.
	* binutils-all/objcopy.exp: Run them.

2006-06-06  Paul Brook  <paul@codesourcery.com>
